--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "@types/react": "18.2.58",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.7",
+    "daisyui": "^4.7.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
